--- a/docs/write_up/SupplementaryTablesandFigures.tex
+++ b/docs/write_up/SupplementaryTablesandFigures.tex
@@ -39,22 +39,6 @@
 
 %% Figures %%
 
-\begin{figure}[!ht]
-	\label{fig:S0}
-	\begin{subfigure}{\textwidth}
-	\includegraphics[width =\linewidth]{"figures/Suppl_FactorLoading_Omega1"}
-\end{subfigure}
-\begin{subfigure}{\textwidth}
-	\includegraphics[width = \linewidth]{"figures/Suppl_FactorLoading_Omega2"}
-\end{subfigure}
-\caption{Top: First three species factor loadings for average spatial encounter
-probability, bottom: First three species factor loadings for average spatial
-density}
-
-\end{figure}
-
-
-
 
 \begin{figure}[!ht]
 	\label{fig:S1}
@@ -64,8 +48,8 @@ density}
 \begin{subfigure}{0.5\textwidth}
 	\includegraphics[width = \linewidth]{"figures/Factor1_HabitatO1"}
 \end{subfigure}
-\caption{Left: Spatial Omega 1 correlated against Depth, Right: Omega 1
-	correlated against substrate type}
+\caption{Left: Average spatial encounter probability factor 1 values correlated
+	against; Left - Depth, Right - substrate type}
 
 \end{figure}
 
@@ -80,8 +64,8 @@ density}
 \begin{subfigure}{0.5\textwidth}
 	\includegraphics[width = \linewidth]{"figures/Factor1_HabitatO2"}
 \end{subfigure}
-\caption{Left: Spatial Omega 2 correlated against Depth, Right: Omega 2
-	correlated against substrate type}
+\caption{Left: Average spatial positive density factor 1 values correlated
+	against; Left- Depth, Right- substrate type}
 
 \end{figure}
 
