--- a/docs/write_up/JDM_mixed_fishery.tex
+++ b/docs/write_up/JDM_mixed_fishery.tex
@@ -503,7 +503,7 @@ predictor;
 			& \sum\limits_{f=1}^{n_{\omega}} L_{\omega}(c_{i},f)
 			\omega_{p}(s_{i},f) + \sum\limits_{f=1}^{n_{\varepsilon}}
 			L_{\varepsilon}(c_{i},f) \varepsilon_{p}(s_{i},f,t_{i}) + \\ 
-			& \sum\limits_{v=1}^{n_{v}}\delta_{p}(v)Q(c_{i}, v_{i})
+			& \sum\limits_{v=1}^{n_{v}}\delta_{p}(v)Q_{p}(c_{i}, v_{i})
 		\end{split}
 		\end{equation}
 
@@ -514,7 +514,7 @@ and positive catch rates modelling using a gamma- distribution \cite{Thorson2015
 			& \sum\limits_{f=1}^{n_{\omega}} L_{\omega}(c_{i},f)
 			\omega_{r}(s_{i},f) +\sum\limits_{f=1}^{n_{\varepsilon}} 
 			L_{\varepsilon}(c_{i},f) \varepsilon_{r}(s_{i},f,t_{i}) + \\
-			& \sum\limits_{v=1}^{n_{v}}\delta_{r}(v) Q(c_{i}, v_{i})
+			& \sum\limits_{v=1}^{n_{v}}\delta_{r}(v) Q_{r}(c_{i}, v_{i})
 			\end{split}
 		\end{equation}
 
